Tests updated